--- a/static/assets/css/components/question13.html
+++ b/static/assets/css/components/question13.html
@@ -991,7 +991,7 @@
         class="question13-container"
         ><span class="question13-text heading3"
           ><span>What types of cars do you sell?</span></span
-        ><span class="bodySmall"
+        ><span class="bodySmall question13-text1"
           ><span
             >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
             volutpat turpis. Mauris luctus rutrum mi ut rhoncus.</span
