--- a/static/assets/css/components/question17.html
+++ b/static/assets/css/components/question17.html
@@ -987,11 +987,11 @@
     </style></head
   ><body
     ><link rel="stylesheet" href="../style.css" /><div
-      ><link href="./question11.css" rel="stylesheet" /><div
-        class="question11-container"
-        ><span class="question11-text heading3"
+      ><link href="./question17.css" rel="stylesheet" /><div
+        class="question17-container"
+        ><span class="question17-text heading3"
           ><span>What types of cars do you sell?</span></span
-        ><span class="bodySmall question11-text1"
+        ><span class="bodySmall"
           ><span
             >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
             volutpat turpis. Mauris luctus rutrum mi ut rhoncus.</span
