--- a/templates/map.html
+++ b/templates/map.html
@@ -128,16 +128,11 @@
                 >Introducing SandE: The Future of Beach Cleaning</h1
               ><span class="map-hero-sub-heading bodyLarge"
                 ><span
-                  ><span
-                    ><span
-                      >Revolutionizing sand filtration for cleaner beaches and a
-                      healthier ecosystem</span
-                    ><span> </span></span
-                  ><span><span> </span><span> </span></span></span
-                ><span
-                  ><span><span> </span><span> </span></span
-                  ><span><span> </span><span> </span></span></span></span
-              ><div class="map-btn-group"></div></div></div></div
+                  >Revolutionizing sand cleaning with cutting-edge
+                  technology</span
+                ><span> </span><span> </span><span> </span><span> </span
+                ><span> </span><span> </span
+                ><span> </span></span></div></div></div
         ><div class="map-gallery"
           ><div class="map-gallery1"
             ><div class="map-container2"
@@ -229,7 +224,6 @@
                           if (boundingBox) boundingBox.setMap(null); // Remove existing boundingBox
                           boundingBox = new google.maps.Rectangle(rectangleOptions);
                           boundingBox.setMap(map);
-                          //console.log(rectangleOptions.bounds);
                       } else {
                           if (noGoZone) noGoZone.setMap(null); // Remove existing noGoZone
                           noGoZone = new google.maps.Rectangle(rectangleOptions);
@@ -290,7 +284,7 @@
             ></div
           ><div class="map-separator"></div
           ><div class="map-container5"
-            ><span class="bodySmall map-text14"
+            ><span class="bodySmall map-text8"
               >© 2024 SandE, All Rights Reserved.</span
             ><div class="map-icon-group1"></div
             ><a
