--- a/static/assets/css/components/feature-card2.css
+++ b/static/assets/css/components/feature-card2.css
@@ -20,12 +20,12 @@
   position: absolute;
 }
 .feature-card2-root-class-name2 {
-  top: 339px;
-  right: -17px;
+  top: 342px;
+  right: 0px;
   position: absolute;
 }
 .feature-card2-root-class-name3 {
-  right: -11px;
+  right: 0px;
   bottom: -35px;
   position: absolute;
 }
@@ -40,5 +40,17 @@
 @media(max-width: 479px) {
   .feature-card2-container {
     flex-direction: column;
+  }
+  .feature-card2-root-class-name {
+    position: static;
+  }
+  .feature-card2-root-class-name1 {
+    position: static;
+  }
+  .feature-card2-root-class-name2 {
+    position: static;
+  }
+  .feature-card2-root-class-name3 {
+    position: static;
   }
 }
