--- a/static/assets/css/components/question1.css
+++ b/static/assets/css/components/question1.css
@@ -11,3 +11,21 @@
 .question1-text {
   font-weight: 700;
 }
+
+
+@media(max-width: 479px) {
+  .question1-container {
+    width: 100%;
+    height: 100%;
+  }
+  .question1-text {
+    text-align: left;
+  }
+  .question1-text1 {
+    align-self: flex-start;
+    text-align: left;
+  }
+  .question1-root-class-name1 {
+    align-self: flex-start;
+  }
+}
