--- a/static/assets/css/components/question12.css
+++ b/static/assets/css/components/question12.css
@@ -11,3 +11,11 @@
 .question12-text {
   font-weight: 700;
 }
+@media(max-width: 479px) {
+  .question12-text {
+    text-align: left;
+  }
+  .question12-text1 {
+    text-align: left;
+  }
+}
