--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -37,6 +37,24 @@
   font-weight: 700;
 }
 
+
+@media(max-width: 479px) {
+  .question1-container {
+    width: 100%;
+    height: 100%;
+  }
+  .question1-text {
+    text-align: left;
+  }
+  .question1-text1 {
+    align-self: flex-start;
+    text-align: left;
+  }
+  .question1-root-class-name1 {
+    align-self: flex-start;
+  }
+}
+
 .home-container {
   width: 100%;
   display: flex;
@@ -196,16 +214,16 @@
   max-width: 800px;
   text-align: center;
 }
-.home-hero-sub-heading {
-  font-size: 18px;
-  text-align: center;
-}
 .home-btn-group {
   gap: var(--dl-space-space-oneandhalfunits);
   border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
   align-items: center;
   flex-direction: row;
+}
+.home-hero-sub-heading {
+  font-size: 18px;
+  text-align: center;
 }
 .home-features {
   flex: 0 0 auto;
@@ -291,10 +309,10 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.home-text48 {
+.home-text42 {
   margin-bottom: var(--dl-space-space-oneandhalfunits);
 }
-.home-text49 {
+.home-text43 {
   text-align: left;
 }
 .home-container5 {
@@ -422,7 +440,7 @@
   .home-banner-sub-heading {
     max-width: 100%;
   }
-  .home-text49 {
+  .home-text43 {
     text-align: center;
     padding-left: var(--dl-space-space-threeunits);
     padding-right: var(--dl-space-space-threeunits);
@@ -491,7 +509,7 @@
     align-items: center;
     justify-content: center;
   }
-  .home-text49 {
+  .home-text43 {
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
   }
@@ -510,13 +528,16 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .home-text52 {
+  .home-text46 {
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
 }
 @media(max-width: 479px) {
   .home-navbar-interactive {
     padding: var(--dl-space-space-unit);
+  }
+  .home-logo {
+    text-align: left;
   }
   .home-desktop-menu {
     display: none;
@@ -545,6 +566,9 @@
     padding-right: var(--dl-space-space-unit);
     padding-bottom: var(--dl-space-space-twounits);
   }
+  .home-features-heading {
+    text-align: center;
+  }
   .home-banner1 {
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
@@ -553,6 +577,15 @@
   }
   .home-footer1 {
     padding: var(--dl-space-space-unit);
+  }
+  .home-nav222 {
+    text-align: center;
+  }
+  .home-nav422 {
+    text-align: center;
+  }
+  .home-nav522 {
+    text-align: center;
   }
   .home-separator {
     margin-top: var(--dl-space-space-oneandhalfunits);
@@ -563,7 +596,7 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .home-text52 {
+  .home-text46 {
     text-align: center;
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
