--- a/static/assets/css/remote-control.css
+++ b/static/assets/css/remote-control.css
@@ -139,13 +139,17 @@
 }
 .remote-control-hero {
   width: 100%;
-  height: 369px;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.remote-control-hero1 {
+  height: 100%;
+}
 .remote-control-container1 {
   gap: var(--dl-space-space-oneandhalfunits);
+  height: 167px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -162,16 +166,20 @@
 .remote-control-faq {
   flex: 0 0 auto;
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.remote-control-faq-container {
+  height: 100%;
+}
 .remote-control-faq1 {
   gap: var(--dl-space-space-twounits);
   width: 100%;
-  height: 756px;
+  height: 840px;
   display: flex;
+  position: relative;
   max-width: var(--dl-size-size-maxwidth);
   align-items: flex-start;
   padding-top: var(--dl-space-space-fourunits);
@@ -187,63 +195,76 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.remote-control-text14 {
+.remote-control-text08 {
   margin-bottom: var(--dl-space-space-oneandhalfunits);
 }
 .remote-control-pasted-image {
-  width: 538px;
-  height: 546px;
+  top: 139px;
+  left: 307px;
+  width: 582px;
+  height: 591px;
   display: flex;
-  position: relative;
-  align-items: flex-end;
+  position: absolute;
+  margin-top: 28px;
+  align-items: center;
+  margin-right: var(--dl-space-space-unit);
   background-size: cover;
   justify-content: center;
-  background-image: url("../../public/external/pastedimage-9kt-600w.png");
+  background-image: url("../../public/external/pastedimage-9kt-1500w.png");
   background-position: center;
 }
 .remote-control-pasted-image1 {
-  top: 175px;
-  left: 176px;
-  width: 195px;
-  height: 195px;
+  top: 186px;
+  left: 188px;
+  width: 37%;
+  height: 37%;
   position: absolute;
   align-self: center;
 }
 .remote-control-up {
-  top: 125px;
-  left: 231px;
+  top: 53px;
+  left: 173px;
   color: var(--dl-color-gray-black);
-  width: 68px;
-  height: 33px;
+  width: 40%;
+  height: 20%;
   position: absolute;
-  border-color: #ffcf87;
-  background-color: var(--dl-color-custom-accent1);
+  border-color: rgba(255, 207, 135, 0);
+  background-color: rgba(255, 207, 135, 0);
 }
 .remote-control-left {
-  left: 33px;
-  bottom: 303px;
+  top: 195px;
+  left: 47px;
+  width: 20%;
+  height: 40%;
   position: absolute;
-  border-color: #ffcf87;
-  background-color: var(--dl-color-custom-accent1);
-}
-.remote-control-down {
-  left: 240px;
-  bottom: 134px;
-  position: absolute;
-  border-color: #ffcf87;
-  border-style: hidden;
-  background-color: #ffcf87;
+  border-color: rgba(255, 207, 135, 0);
+  background-color: rgba(255, 207, 135, 0);
 }
 .remote-control-right {
-  right: 19px;
-  bottom: 315px;
+  top: 180px;
+  right: 36px;
+  width: 20%;
+  height: 40%;
   position: absolute;
-  border-color: #ffcf87;
-  background-color: var(--dl-color-custom-accent1);
+  border-color: rgba(255, 207, 135, 0);
+  background-color: rgba(255, 207, 135, 0);
+}
+.remote-control-down {
+  left: 180px;
+  width: 40%;
+  bottom: 44px;
+  height: 20%;
+  position: absolute;
+  border-color: rgba(255, 207, 135, 0);
+  border-style: hidden;
+  background-color: rgba(255, 207, 135, 0);
 }
 .remote-control-button {
-  width: 108px;
-  height: 92px;
+  top: 82px;
+  right: 72px;
+  width: 215px;
+  height: 140px;
+  position: absolute;
   align-self: flex-start;
   text-align: center;
   background-color: #0bff32;
@@ -309,8 +330,8 @@
   justify-content: space-between;
 }
 .remote-control-icon-group1 {
+  border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
-  position: relative;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
@@ -319,18 +340,14 @@
   display: contents;
 }
 .remote-control-icon10 {
-  flex: 1;
   width: 24px;
-  align-self: stretch;
+  height: 24px;
+  align-self: center;
   text-decoration: none;
 }
 .remote-control-icon12 {
-  top: 3px;
-  flex: 1;
-  right: -234px;
   width: 24px;
-  position: absolute;
-  align-self: stretch;
+  height: 24px;
 }
 .remote-control-icon14 {
   width: 24px;
@@ -414,7 +431,7 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .remote-control-text15 {
+  .remote-control-text09 {
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
 }
@@ -440,6 +457,46 @@
   .remote-control-container1 {
     margin-bottom: var(--dl-space-space-unit);
   }
+  .remote-control-faq1 {
+    height: 100%;
+    position: relative;
+  }
+  .remote-control-pasted-image {
+    width: 50VW;
+    height: 259px;
+    margin-left: -40px;
+    padding-right: 0px;
+  }
+  .remote-control-pasted-image1 {
+    top: 157px;
+    left: 153px;
+    width: 0px;
+    height: 37%;
+  }
+  .remote-control-up {
+    top: 45px;
+    left: 140px;
+  }
+  .remote-control-left {
+    top: 161px;
+    left: 40px;
+    background-color: rgba(255, 207, 135, 0);
+  }
+  .remote-control-right {
+    top: 153px;
+    right: 23px;
+  }
+  .remote-control-down {
+    left: 149px;
+    bottom: 32px;
+  }
+  .remote-control-button {
+    top: 124px;
+    right: 8px;
+    width: 20%;
+    height: 10%;
+    position: absolute;
+  }
   .remote-control-footer {
     padding: var(--dl-space-space-unit);
   }
@@ -452,7 +509,7 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .remote-control-text15 {
+  .remote-control-text09 {
     text-align: center;
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
