--- a/static/assets/css/user-guideline.css
+++ b/static/assets/css/user-guideline.css
@@ -20,12 +20,12 @@
   position: absolute;
 }
 .feature-card2-root-class-name2 {
-  top: 339px;
-  right: -17px;
+  top: 342px;
+  right: 0px;
   position: absolute;
 }
 .feature-card2-root-class-name3 {
-  right: -11px;
+  right: 0px;
   bottom: -35px;
   position: absolute;
 }
@@ -40,6 +40,18 @@
 @media(max-width: 479px) {
   .feature-card2-container {
     flex-direction: column;
+  }
+  .feature-card2-root-class-name {
+    position: static;
+  }
+  .feature-card2-root-class-name1 {
+    position: static;
+  }
+  .feature-card2-root-class-name2 {
+    position: static;
+  }
+  .feature-card2-root-class-name3 {
+    position: static;
   }
 }
 
@@ -65,7 +77,6 @@
 }
 .user-guideline-desktop-menu {
   flex: 1;
-  display: flex;
   justify-content: space-between;
 }
 .user-guideline-links {
@@ -95,12 +106,13 @@
   text-decoration: none;
 }
 .user-guideline-burger-menu {
-  display: none;
+  display: flex;
 }
 .user-guideline-icon {
   width: var(--dl-size-size-xsmall);
   cursor: pointer;
   height: var(--dl-size-size-xsmall);
+  display: none;
 }
 .user-guideline-mobile-menu1 {
   top: 0px;
@@ -184,13 +196,13 @@
 }
 .user-guideline-hero {
   width: 100%;
-  height: 301px;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .user-guideline-hero1 {
-  height: 292px;
+  height: 100%;
 }
 .user-guideline-container1 {
   gap: var(--dl-space-space-oneandhalfunits);
@@ -199,27 +211,23 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.user-guideline-hero-sub-heading {
-  font-size: 18px;
-  text-align: center;
-}
 .user-guideline-container2 {
   flex: 0 0 auto;
   width: auto;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
   height: auto;
   display: flex;
   align-items: flex-start;
   justify-content: center;
 }
-.user-guideline-btn-group {
-  gap: var(--dl-space-space-oneandhalfunits);
-  border: 2px dashed rgba(120, 120, 120, 0.4);
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-}
 .user-guideline-hero-heading {
+  width: 100%;
+  height: 100%;
   max-width: 800px;
+  text-align: center;
+}
+.user-guideline-hero-sub-heading {
+  font-size: 18px;
   text-align: center;
 }
 .user-guideline-features {
@@ -233,7 +241,7 @@
 .user-guideline-features1 {
   gap: var(--dl-space-space-threeunits);
   width: 100%;
-  height: 889px;
+  height: 100%;
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
@@ -251,6 +259,9 @@
   grid-gap: var(--dl-space-space-oneandhalfunits);
   position: relative;
   grid-template-columns: 1fr 1fr;
+}
+.user-guideline-footer {
+  height: 100%;
 }
 .user-guideline-container4 {
   gap: var(--dl-space-space-unit);
@@ -313,8 +324,8 @@
   justify-content: space-between;
 }
 .user-guideline-icon-group1 {
+  border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
-  position: relative;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
@@ -323,25 +334,26 @@
   display: contents;
 }
 .user-guideline-icon10 {
-  top: -2px;
-  flex: 1;
-  left: -347px;
   width: 24px;
-  position: absolute;
-  align-self: stretch;
+  height: 24px;
+  align-self: center;
   text-decoration: none;
 }
 .user-guideline-icon12 {
-  top: 0px;
-  flex: 1;
-  left: -161px;
   width: 24px;
   height: 24px;
-  position: absolute;
 }
 .user-guideline-icon14 {
   width: 24px;
   height: 24px;
+}
+@media(max-width: 1200px) {
+  .user-guideline-desktop-menu {
+    display: none;
+  }
+  .user-guideline-burger-menu {
+    display: flex;
+  }
 }
 @media(max-width: 991px) {
   .user-guideline-hero1 {
@@ -353,13 +365,13 @@
     margin-bottom: var(--dl-space-space-twounits);
     padding-right: 0px;
   }
+  .user-guideline-hero-heading {
+    text-align: center;
+  }
   .user-guideline-hero-sub-heading {
     text-align: center;
     padding-left: var(--dl-space-space-threeunits);
     padding-right: var(--dl-space-space-threeunits);
-  }
-  .user-guideline-hero-heading {
-    text-align: center;
   }
 }
 @media(max-width: 767px) {
@@ -419,7 +431,7 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .user-guideline-text15 {
+  .user-guideline-text09 {
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
 }
@@ -430,13 +442,17 @@
   .user-guideline-desktop-menu {
     display: none;
   }
-  .user-guideline-burger-menu {
+  .user-guideline-icon {
     display: flex;
   }
   .user-guideline-mobile-menu1 {
     padding: 16px;
   }
+  .user-guideline-hero {
+    height: 359px;
+  }
   .user-guideline-hero1 {
+    height: 200%;
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
@@ -445,10 +461,16 @@
   .user-guideline-container1 {
     margin-bottom: var(--dl-space-space-unit);
   }
-  .user-guideline-btn-group {
-    flex-direction: column;
+  .user-guideline-container2 {
+    height: 30%;
+  }
+  .user-guideline-hero-heading {
+    height: 50%;
   }
   .user-guideline-features1 {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
@@ -457,16 +479,32 @@
   .user-guideline-footer {
     padding: var(--dl-space-space-unit);
   }
+  .user-guideline-nav122 {
+    text-align: center;
+  }
+  .user-guideline-nav222 {
+    text-align: center;
+  }
+  .user-guideline-nav322 {
+    text-align: center;
+  }
+  .user-guideline-nav422 {
+    text-align: center;
+  }
+  .user-guideline-nav522 {
+    text-align: center;
+  }
   .user-guideline-separator {
     margin-top: var(--dl-space-space-oneandhalfunits);
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
   .user-guideline-container5 {
+    width: 100%;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
   }
-  .user-guideline-text15 {
+  .user-guideline-text09 {
     text-align: center;
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
